First Real Working Version

--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,23 @@ body {font-family: Arial;}
   border: 1px solid #ccc;
   border-top: none;
 } 
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+/* Style the close button */
+.topright {
+  float: right;
+  cursor: pointer;
+  font-size: 28px;
+}
+.topright:hover {color: red;}
+
 
